--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
-<html>
-<body style="margin: 0">
-  <embed src="Vitaparcour.pdf" type="application/pdf" width="100%" height="100%" />
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>PDF Viewer</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    embed {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <embed src="document.pdf" type="application/pdf" />
 </body>
 </html>
