--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>PDF Viewer</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    embed {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <embed src="document.pdf" type="application/pdf" />
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <object data="Vitaparcour.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+  </body>
 </html>
